# catboost-mlx

./: CHANGELOG.md  README.md
.claude/state/: CHANGELOG-DEV.md  DECISIONS.md  HANDOFF.md  LESSONS-LEARNED.md  TODOS.md
.github/workflows/: mlx-branch-b-regression.yaml  mlx-perf-regression.yaml
benchmarks/axisC/: run_axisC_epsilon.sh
benchmarks/axisC/results/: epsilon_axisC_catboost_cpu_0.json  epsilon_axisC_catboost_cpu_1.json  epsilon_axisC_catboost_cpu_42.json  epsilon_axisC_catboost_cpu_43.json  epsilon_axisC_catboost_cpu_44.json  epsilon_axisC_iter1000_catboost_cpu_0.json  epsilon_axisC_iter1000_catboost_cpu_1.json  epsilon_axisC_iter1000_catboost_cpu_42.json  epsilon_axisC_iter1000_catboost_cpu_43.json  epsilon_axisC_iter1000_catboost_cpu_44.json  epsilon_axisC_iter2000_catboost_cpu_0.json  epsilon_axisC_iter2000_catboost_cpu_1.json  epsilon_axisC_iter2000_catboost_cpu_42.json  epsilon_axisC_iter2000_catboost_cpu_43.json  epsilon_axisC_iter2000_catboost_cpu_44.json  epsilon_axisC_iter4000_catboost_cpu_0.json  epsilon_axisC_iter4000_catboost_cpu_1.json  epsilon_axisC_iter4000_catboost_cpu_42.json  epsilon_axisC_iter4000_catboost_cpu_43.json  epsilon_axisC_iter4000_catboost_cpu_44.json  epsilon_axisC_iter500_catboost_cpu_0.json  epsilon_axisC_iter500_catboost_cpu_1.json  epsilon_axisC_iter500_catboost_cpu_42.json  epsilon_axisC_iter500_catboost_cpu_43.json  epsilon_axisC_iter500_catboost_cpu_44.json  epsilon_catboost_mlx_0.json  epsilon_catboost_mlx_1.json  epsilon_iter1000_catboost_mlx_0.json  epsilon_iter1000_catboost_mlx_1.json  epsilon_iter1000_catboost_mlx_42.json  epsilon_iter1000_catboost_mlx_43.json  epsilon_iter1000_catboost_mlx_44.json  epsilon_iter2000_catboost_mlx_0.json  epsilon_iter2000_catboost_mlx_1.json  epsilon_iter2000_catboost_mlx_42.json  epsilon_iter2000_catboost_mlx_43.json  epsilon_iter2000_catboost_mlx_44.json  epsilon_iter4000_catboost_mlx_0.json  epsilon_iter4000_catboost_mlx_1.json  epsilon_iter4000_catboost_mlx_42.json  (+5 more)
benchmarks/upstream/: README.md  __init__.py
benchmarks/upstream/adapters/: __init__.py  adult.py  epsilon.py  higgs.py  mslr.py
benchmarks/upstream/results/: adult_catboost_cpu_42.json  adult_catboost_cpu_43.json  adult_catboost_cpu_44.json  adult_catboost_mlx_42.json  adult_catboost_mlx_43.json  adult_catboost_mlx_44.json  adult_catboost_mlx_no_cat_42.json  adult_catboost_mlx_no_cat_43.json  adult_catboost_mlx_no_cat_44.json  adult_iter1000_catboost_cpu_42.json  adult_iter1000_catboost_cpu_43.json  adult_iter1000_catboost_cpu_44.json  adult_iter1000_catboost_mlx_42.json  adult_iter1000_catboost_mlx_43.json  adult_iter1000_catboost_mlx_44.json  adult_iter1000_lightgbm_42.json  adult_iter1000_lightgbm_43.json  adult_iter1000_lightgbm_44.json  adult_iter1000_xgboost_42.json  adult_iter1000_xgboost_43.json  adult_iter1000_xgboost_44.json  adult_lightgbm_42.json  adult_lightgbm_43.json  adult_lightgbm_44.json  adult_xgboost_42.json  adult_xgboost_43.json  adult_xgboost_44.json  amazon_catboost_cpu_42.json  amazon_catboost_cpu_43.json  amazon_catboost_cpu_44.json  amazon_catboost_mlx_42.json  amazon_catboost_mlx_43.json  amazon_catboost_mlx_44.json  amazon_iter1000_catboost_cpu_42.json  amazon_iter1000_catboost_cpu_43.json  amazon_iter1000_catboost_cpu_44.json  amazon_iter1000_catboost_mlx_42.json  amazon_iter1000_catboost_mlx_43.json  amazon_iter1000_catboost_mlx_44.json  amazon_iter1000_lightgbm_42.json  (+124 more)
benchmarks/upstream/scripts/: __init__.py  _runner_common.py  aggregate_results.py  make_pareto_plots.py  run_catboost_cpu.py  run_catboost_mlx.py  run_lightgbm.py  run_subset.sh  run_xgboost.py
catboost/mlx/: README.md
catboost/mlx/kernels/: kernel_sources.h
catboost/mlx/methods/: histogram.cpp  histogram.h  mlx_boosting.cpp  mlx_boosting.h  structure_searcher.cpp  structure_searcher.h
catboost/mlx/tests/: bench_boosting.cpp  csv_train.cpp
catboost/mlx/train_lib/: train.cpp
docs/: upstream_issue_draft.md
docs/benchmarks/: cross-class-cuda-comparison.md  results_summary.csv  results_table.md  v0.5.x-pareto.md  v0.6.0-pareto.md
docs/sprint27/scratch/: aa-t1-anchor-inventory.md
docs/sprint33/commit2-gates/: run_g4a_g4b.py  run_g4d.py  run_g4e.py
docs/sprint37/t3-rerun/: verdict.md
docs/sprint38/f2/: FINDING.md  README.md
docs/sprint38/fix-verify/: FINDING.md
docs/sprint38/lg-small-n/: code-reading.md  math-derivation.md
docs/sprint38/probe-g/: FINDING.md
docs/sprint38/probe-h/: FINDING.md
docs/sprint38/probe-q/: PHASE-2-FINDING.md  README.md
docs/sprint38/s0-fbspp-fix/: gate-report.md
docs/sprint39/: sprint-close.md
docs/sprint40/: sprint-close.md
docs/sprint40/pre_lane_check/: FINDING.md
docs/sprint41/: T4-pypi-readiness.md  profile_output.txt  profile_predict.py  sprint-close.md  sprint-plan.md
docs/sprint42/: sprint-close.md  sprint-plan.md
docs/sprint43/: T4-synthesis.md  sprint-close.md  sprint-plan.md
docs/sprint44/: sprint-plan.md
docs/sprint45/: coreml-demo-spec.md  pareto-lane-spec.md  sprint-close.md  sprint-plan.md
docs/sprint45/T2/: analysis.json  probe-verdict.md
docs/sprint45/T3/: decision-synthesis.md  devils-advocate-review.md
docs/sprint45/cuda-bench-bundle/: .gitignore  README.md  bundle_cache.py  patch.py  prepare.py  record_hardware.py  requirements.txt  run.py
docs/sprint46/: sprint-plan.md
docs/sprint46/T1/: current-state.md
docs/sprint46/T2/: feasibility.md
docs/sprint46/T3/: probe-d-spec.md
docs/sprint46/T5/: decision.md
docs/sprint46/T6/: summary.md
docs/sprint47/: sprint-plan.md
docs/sprint47/T4/: release-validation.md
docs/sprint48/: scoping.md
docs/sprint48/T0/: dac-stress-test-delta.md  dac-stress-test.md  (+1 more)
docs/sprint49/: sprint-plan.md
docs/sprint50/: scoping.md
python/: CHANGELOG.md  pyproject.toml
python/catboost_mlx/: __init__.py  _predict_utils.py  core.py
python/catboost_mlx/_core/: CMakeLists.txt
python/tests/: test_basic.py  test_qa_round4.py
tools/catboost_tripoint/: __init__.py  cli.py  floor.py  pyproject.toml  verifier.py
tools/catboost_tripoint/tests/: test_integration.py  test_smoke.py
(+217 files in other folders)
